# online-market

./: .flake8  Makefile  config.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 29631112f0f7_create_users_table.py  7137051ec8df_create_users_table.py  9db8a209a651_initial.py
app/: main.py
bot/: config.py  main.py
bot/buttons/: sub_menu.py
bot/filters/: admin.py
bot/handlers/private/: __init__.py  cart.py  menu.py  product.py  referrals.py  settings.py
bot/handlers/private/admin/: __init__.py  category.py  menu.py  product.py
bot/inlinemode/: __init__.py  product.py
bot/middleware/: i18n.py
bot/state/: __init__.py  admin_state.py
bot/states/: admin_state.py
bot/utils/: auth.py
database/: __init__.py  base.py
database/models/: __init__.py  orders.py  shops.py  users.py
database/services/: __init__.py  cart_service.py  user_service.py
db/: __init__.py  base.py
db/models/: orders.py  shops.py  users.py
locales/: message.pot  messages.pot
locales/eng/LC_MESSAGES/: messages.mo  messages.po
locales/uz/LC_MESSAGES/: messages.mo  messages.po
media/attachment/: 00ed2c6c-1111-4ffe-a038-2d75c042f8b0  00ed2c6c-1111-4ffe-a038-2d75c042f8b0.metadata.json  1d29b806-0d7c-47ca-bf41-9450c361ee55  22c0183b-40cb-4f97-858c-622ce03be11b.metadata.json  2fb923b3-662f-43a5-be2c-1de64ad6a383  2fb923b3-662f-43a5-be2c-1de64ad6a383.metadata.json  50548a06-d1e2-4c6d-8f30-59e5b53e8886  50548a06-d1e2-4c6d-8f30-59e5b53e8886.metadata.json  bcf8b78a-f538-46d1-aab4-66029960b2bf.metadata.json  cbba86d2-9a77-4344-abdb-5d2f6a980d63  cbba86d2-9a77-4344-abdb-5d2f6a980d63.metadata.json  e8166778-dbee-4e59-bcd5-0f7fb380bfef
web/: app.py  provider.py
