[project]
name = "online-market"
version = "0.1.0"
description = ""
authors = [
    {name = "Anasxon Ummataliyev",email = "aummataliy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.15"
dependencies = [
    "aiogram (>=3.24.0,<4.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "alembic (>=1.18.0,<2.0.0)",
    "i18n (>=0.2,<0.3)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "sqlalchemy-file (>=0.6.0,<0.7.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
